TL visibility animator fix, TL state & size to DB

--- a/src/components/module/Module.css
+++ b/src/components/module/Module.css
@@ -58,6 +58,10 @@
   filter: saturate(0) brightness(1.5) contrast(0.8);
 }
 
+.module-tloff {
+  display: none;
+}
+
 .module-header {
   height: 30px;
   width: 100%;
